examples/type_system/failing/16_inferred_effect_missing_on_typed_caller.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E400: caller declares `with Time` but invokes an IO function.

fn sink(msg: String) -> Unit with IO {
    print(msg)
}

fn typed_time_only() -> Int with Time {
    sink("hello")
    1
}

typed_time_only()
